# fdr

./: .gitignore  .rubocop.yml  Gemfile  LICENSE  README.md  Rakefile  fdr.gemspec
.github/workflows/: ci.yml
ext/fdr_native/: Cargo.toml  extconf.rb
ext/fdr_native/core/: Cargo.toml
ext/fdr_native/core/src/: lib.rs
ext/fdr_native/core/tests/: configuration.rs  edge_cases.rs  error_handling.rs  filtering.rs  pattern_matching.rs
ext/fdr_native/ffi/: Cargo.toml
ext/fdr_native/ffi/src/: lib.rs
lib/: fdr.rb
lib/fdr/: version.rb
spec/: convenience_spec.rb  error_handling_spec.rb  fdr_spec.rb  filtering_spec.rb  glob_spec.rb  pattern_matching_spec.rb  search_options_spec.rb  size_and_time_spec.rb  spec_helper.rb  symlink_spec.rb  version_spec.rb
