[package]
name = "fdr-core"
version = "0.1.0"
edition = "2024"
description = "Core library for fdr - fast directory recursion for Ruby using the ignore crate"
license = "MIT"
repository = "https://github.com/havenwood/fdr"
publish = false

[lints]
workspace = true

[dependencies]
# For walking directories in parallel (same as fd uses)
ignore = "0.4"

# For regex support
regex = "1.12"

# For glob pattern support
globset = "0.4"

# For parallel result collection
crossbeam-channel = "0.5"

# For error handling
anyhow = "1.0"

# jemalloc for better performance (23% improvement, same as fd uses)
# Note: Disabled on macOS due to jemalloc bug, see https://github.com/sharkdp/fd/issues/498
[target.'cfg(all(not(windows), not(target_os = "android"), not(target_os = "macos"), not(target_os = "freebsd"), not(target_os = "openbsd"), not(target_os = "illumos"), not(all(target_env = "musl", target_pointer_width = "32")), not(target_arch = "riscv64")))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tempfile = "3.14"
